--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,9 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.1.3",
+    "drizzle": "^1.2.3",
+    "drizzle-react": "^1.2.0",
+    "drizzle-react-components": "^1.2.0",
+    "ethereumjs-testrpc": "^6.0.3",
+    "keymirror": "^0.1.1",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
-    "react-scripts": "1.1.5"
+    "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.5",
+    "react-toastify": "^4.3.1",
+    "reactstrap": "^6.4.0",
+    "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-immutable-state-invariant": "^2.1.0",
+    "redux-persist": "^5.9.1",
+    "redux-thunk": "^2.2.0",
+    "web3": "^1.0.0-beta.36"
   },
   "scripts": {
     "start": "react-scripts start",
