--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "openzeppelin-solidity": "^1.11.0"
+    "openzeppelin-solidity": "^1.11.0",
+    "truffle-hdwallet-provider": "^0.0.6"
   }
 }
