--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-persist": "^5.9.1",
     "redux-thunk": "^2.2.0",
+    "sweetalert": "^2.1.0",
     "web3": "^1.0.0-beta.36"
   },
   "scripts": {
